src/main/java/com/github/gzougianos/packagraph/antlr4/generated/PgLangParser.java
// Generated from C:/Users/gzoug/Java/workspace/packagraph/src/main/antlr4/PgLang.g4 by ANTLR 4.13.2
package com.github.gzougianos.packagraph.antlr4.generated;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.*;
import org.antlr.v4.runtime.tree.*;

import java.util.*;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class PgLangParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
            T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, T__23 = 24,
            T__24 = 25, T__25 = 26, T__26 = 27, VALUE = 28, WS = 29, LINE_COMMENT = 30, BLOCK_COMMENT = 31;
    public static final int
            RULE_script = 0, RULE_statement = 1, RULE_includeStmt = 2, RULE_excludeStmt = 3,
            RULE_showMainGraphStmt = 4, RULE_showLegendGraphStmt = 5, RULE_showNodesStmt = 6,
            RULE_nodesAs = 7, RULE_styleDef = 8, RULE_showEdgesStmt = 9, RULE_edgeFromDef = 10,
            RULE_edgeToDef = 11, RULE_fromNodeStyleDef = 12, RULE_toNodeStyleDef = 13,
            RULE_defineStyleStmt = 14, RULE_withLegend = 15, RULE_nodeOrEdge = 16,
            RULE_defineConstantStmt = 17, RULE_exportStmt = 18, RULE_exportInto = 19,
            RULE_byOverwiting = 20;

    private static String[] makeRuleNames() {
        return new String[]{
                "script", "statement", "includeStmt", "excludeStmt", "showMainGraphStmt",
                "showLegendGraphStmt", "showNodesStmt", "nodesAs", "styleDef", "showEdgesStmt",
                "edgeFromDef", "edgeToDef", "fromNodeStyleDef", "toNodeStyleDef", "defineStyleStmt",
                "withLegend", "nodeOrEdge", "defineConstantStmt", "exportStmt", "exportInto",
                "byOverwiting"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "'include'", "'source'", "'directory'", "';'", "'exclude'", "'externals'",
                "'show'", "'main'", "'graph'", "'legend'", "'nodes'", "'as'", "'with'",
                "'style'", "'edges'", "'from'", "'to'", "'from-node'", "'to-node'", "'define'",
                "'node'", "'edge'", "'constant'", "'export'", "'into'", "'by'", "'overwriting'"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, null, null, "VALUE", "WS", "LINE_COMMENT", "BLOCK_COMMENT"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "PgLang.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public PgLangParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ScriptContext extends ParserRuleContext {
        public TerminalNode EOF() {
            return getToken(PgLangParser.EOF, 0);
        }

        public List<StatementContext> statement() {
            return getRuleContexts(StatementContext.class);
        }

        public StatementContext statement(int i) {
            return getRuleContext(StatementContext.class, i);
        }

        public ScriptContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_script;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PgLangListener) ((PgLangListener) listener).enterScript(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PgLangListener) ((PgLangListener) listener).exitScript(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PgLangVisitor) return ((PgLangVisitor<? extends T>) visitor).visitScript(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ScriptContext script() throws RecognitionException {
        ScriptContext _localctx = new ScriptContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_script);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(45);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 17825954L) != 0)) {
                    {
                        {
                            setState(42);
                            statement();
                        }
                    }
                    setState(47);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(48);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class StatementContext extends ParserRuleContext {
        public IncludeStmtContext includeStmt() {
            return getRuleContext(IncludeStmtContext.class, 0);
        }

        public ExcludeStmtContext excludeStmt() {
            return getRuleContext(ExcludeStmtContext.class, 0);
        }

        public ShowMainGraphStmtContext showMainGraphStmt() {
            return getRuleContext(ShowMainGraphStmtContext.class, 0);
        }

        public ShowLegendGraphStmtContext showLegendGraphStmt() {
            return getRuleContext(ShowLegendGraphStmtContext.class, 0);
        }

        public ShowNodesStmtContext showNodesStmt() {
            return getRuleContext(ShowNodesStmtContext.class, 0);
        }

        public ShowEdgesStmtContext showEdgesStmt() {
            return getRuleContext(ShowEdgesStmtContext.class, 0);
        }

        public DefineStyleStmtContext defineStyleStmt() {
            return getRuleContext(DefineStyleStmtContext.class, 0);
        }

        public DefineConstantStmtContext defineConstantStmt() {
            return getRuleContext(DefineConstantStmtContext.class, 0);
        }

        public ExportStmtContext exportStmt() {
            return getRuleContext(ExportStmtContext.class, 0);
        }

        public StatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_statement;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PgLangListener) ((PgLangListener) listener).enterStatement(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PgLangListener) ((PgLangListener) listener).exitStatement(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PgLangVisitor) return ((PgLangVisitor<? extends T>) visitor).visitStatement(this);
            else return visitor.visitChildren(this);
        }
    }

    public final StatementContext statement() throws RecognitionException {
        StatementContext _localctx = new StatementContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_statement);
        try {
            setState(59);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 1, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(50);
                    includeStmt();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(51);
                    excludeStmt();
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(52);
                    showMainGraphStmt();
                }
                break;
                case 4:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(53);
                    showLegendGraphStmt();
                }
                break;
                case 5:
                    enterOuterAlt(_localctx, 5);
                {
                    setState(54);
                    showNodesStmt();
                }
                break;
                case 6:
                    enterOuterAlt(_localctx, 6);
                {
                    setState(55);
                    showEdgesStmt();
                }
                break;
                case 7:
                    enterOuterAlt(_localctx, 7);
                {
                    setState(56);
                    defineStyleStmt();
                }
                break;
                case 8:
                    enterOuterAlt(_localctx, 8);
                {
                    setState(57);
                    defineConstantStmt();
                }
                break;
                case 9:
                    enterOuterAlt(_localctx, 9);
                {
                    setState(58);
                    exportStmt();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class IncludeStmtContext extends ParserRuleContext {
        public TerminalNode VALUE() {
            return getToken(PgLangParser.VALUE, 0);
        }

        public IncludeStmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_includeStmt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PgLangListener) ((PgLangListener) listener).enterIncludeStmt(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PgLangListener) ((PgLangListener) listener).exitIncludeStmt(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PgLangVisitor) return ((PgLangVisitor<? extends T>) visitor).visitIncludeStmt(this);
            else return visitor.visitChildren(this);
        }
    }

    public final IncludeStmtContext includeStmt() throws RecognitionException {
        IncludeStmtContext _localctx = new IncludeStmtContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_includeStmt);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(61);
                match(T__0);
                setState(62);
                match(T__1);
                setState(63);
                match(T__2);
                setState(64);
                match(VALUE);
                setState(65);
                match(T__3);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ExcludeStmtContext extends ParserRuleContext {
        public ExcludeStmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_excludeStmt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PgLangListener) ((PgLangListener) listener).enterExcludeStmt(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PgLangListener) ((PgLangListener) listener).exitExcludeStmt(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PgLangVisitor) return ((PgLangVisitor<? extends T>) visitor).visitExcludeStmt(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ExcludeStmtContext excludeStmt() throws RecognitionException {
        ExcludeStmtContext _localctx = new ExcludeStmtContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_excludeStmt);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(67);
                match(T__4);
                setState(68);
                match(T__5);
                setState(69);
                match(T__3);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ShowMainGraphStmtContext extends ParserRuleContext {
        public StyleDefContext styleDef() {
            return getRuleContext(StyleDefContext.class, 0);
        }

        public ShowMainGraphStmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_showMainGraphStmt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PgLangListener) ((PgLangListener) listener).enterShowMainGraphStmt(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PgLangListener) ((PgLangListener) listener).exitShowMainGraphStmt(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PgLangVisitor)
                return ((PgLangVisitor<? extends T>) visitor).visitShowMainGraphStmt(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ShowMainGraphStmtContext showMainGraphStmt() throws RecognitionException {
        ShowMainGraphStmtContext _localctx = new ShowMainGraphStmtContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_showMainGraphStmt);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(71);
                match(T__6);
                setState(72);
                match(T__7);
                setState(73);
                match(T__8);
                setState(75);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__12) {
                    {
                        setState(74);
                        styleDef();
                    }
                }

                setState(77);
                match(T__3);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ShowLegendGraphStmtContext extends ParserRuleContext {
        public StyleDefContext styleDef() {
            return getRuleContext(StyleDefContext.class, 0);
        }

        public ShowLegendGraphStmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_showLegendGraphStmt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PgLangListener) ((PgLangListener) listener).enterShowLegendGraphStmt(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PgLangListener) ((PgLangListener) listener).exitShowLegendGraphStmt(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PgLangVisitor)
                return ((PgLangVisitor<? extends T>) visitor).visitShowLegendGraphStmt(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ShowLegendGraphStmtContext showLegendGraphStmt() throws RecognitionException {
        ShowLegendGraphStmtContext _localctx = new ShowLegendGraphStmtContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_showLegendGraphStmt);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(79);
                match(T__6);
                setState(80);
                match(T__9);
                setState(81);
                match(T__8);
                setState(83);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__12) {
                    {
                        setState(82);
                        styleDef();
                    }
                }

                setState(85);
                match(T__3);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ShowNodesStmtContext extends ParserRuleContext {
        public TerminalNode VALUE() {
            return getToken(PgLangParser.VALUE, 0);
        }

        public NodesAsContext nodesAs() {
            return getRuleContext(NodesAsContext.class, 0);
        }

        public StyleDefContext styleDef() {
            return getRuleContext(StyleDefContext.class, 0);
        }

        public ShowNodesStmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_showNodesStmt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PgLangListener) ((PgLangListener) listener).enterShowNodesStmt(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PgLangListener) ((PgLangListener) listener).exitShowNodesStmt(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PgLangVisitor)
                return ((PgLangVisitor<? extends T>) visitor).visitShowNodesStmt(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ShowNodesStmtContext showNodesStmt() throws RecognitionException {
        ShowNodesStmtContext _localctx = new ShowNodesStmtContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_showNodesStmt);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(87);
                match(T__6);
                setState(88);
                match(T__10);
                setState(89);
                match(VALUE);
                setState(91);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__11) {
                    {
                        setState(90);
                        nodesAs();
                    }
                }

                setState(94);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__12) {
                    {
                        setState(93);
                        styleDef();
                    }
                }

                setState(96);
                match(T__3);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class NodesAsContext extends ParserRuleContext {
        public TerminalNode VALUE() {
            return getToken(PgLangParser.VALUE, 0);
        }

        public NodesAsContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_nodesAs;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PgLangListener) ((PgLangListener) listener).enterNodesAs(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PgLangListener) ((PgLangListener) listener).exitNodesAs(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PgLangVisitor) return ((PgLangVisitor<? extends T>) visitor).visitNodesAs(this);
            else return visitor.visitChildren(this);
        }
    }

    public final NodesAsContext nodesAs() throws RecognitionException {
        NodesAsContext _localctx = new NodesAsContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_nodesAs);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(98);
                match(T__11);
                setState(99);
                match(VALUE);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class StyleDefContext extends ParserRuleContext {
        public TerminalNode VALUE() {
            return getToken(PgLangParser.VALUE, 0);
        }

        public StyleDefContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_styleDef;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PgLangListener) ((PgLangListener) listener).enterStyleDef(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PgLangListener) ((PgLangListener) listener).exitStyleDef(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PgLangVisitor) return ((PgLangVisitor<? extends T>) visitor).visitStyleDef(this);
            else return visitor.visitChildren(this);
        }
    }

    public final StyleDefContext styleDef() throws RecognitionException {
        StyleDefContext _localctx = new StyleDefContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_styleDef);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(101);
                match(T__12);
                setState(102);
                match(T__13);
                setState(103);
                match(VALUE);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ShowEdgesStmtContext extends ParserRuleContext {
        public EdgeFromDefContext edgeFromDef() {
            return getRuleContext(EdgeFromDefContext.class, 0);
        }

        public EdgeToDefContext edgeToDef() {
            return getRuleContext(EdgeToDefContext.class, 0);
        }

        public StyleDefContext styleDef() {
            return getRuleContext(StyleDefContext.class, 0);
        }

        public FromNodeStyleDefContext fromNodeStyleDef() {
            return getRuleContext(FromNodeStyleDefContext.class, 0);
        }

        public ToNodeStyleDefContext toNodeStyleDef() {
            return getRuleContext(ToNodeStyleDefContext.class, 0);
        }

        public ShowEdgesStmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_showEdgesStmt;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PgLangListener) ((PgLangListener) listener).enterShowEdgesStmt(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PgLangListener) ((PgLangListener) listener).exitShowEdgesStmt(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PgLangVisitor)
                return ((PgLangVisitor<? extends T>) visitor).visitShowEdgesStmt(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ShowEdgesStmtContext showEdgesStmt() throws RecognitionException {
        ShowEdgesStmtContext _localctx = new ShowEdgesStmtContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_showEdgesStmt);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(105);
                match(T__6);
                setState(106);
                match(T__14);
                setState(108);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__15) {
                    {
                        setState(107);
                        edgeFromDef();
                    }
                }

                setState(111);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__16) {
                    {
                        setState(110);
                        edgeToDef();
                    }
                }

                setState(114);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 8, _ctx)) {
                    case 1: {
                        setState(113);
                        styleDef();
                    }
                    break;
                }
                setState(117);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 9, _ctx)) {
                    case 1: {
                        setState(116);
                        fromNodeStyleDef();
                    }
                    break;
                }
                setState(120);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == T__12) {
                    {
                        setState(119);
                        toNodeStyleDef();
                    }
                }

                setState(122);
                match(T__3);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class EdgeFromDefContext extends ParserRuleContext {
        public TerminalNode VALUE() {
            return getToken(PgLangParser.VALUE, 0);
        }

        public EdgeFromDefContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_edgeFromDef;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PgLangListener) ((PgLangListener) listener).enterEdgeFromDef(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PgLangListener) ((PgLangListener) listener).exitEdgeFromDef(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PgLangVisitor) return ((PgLangVisitor<? extends T>) visitor).visitEdgeFromDef(this);
            else return visitor.visitChildren(this);
        }
    }

    public final EdgeFromDefContext edgeFromDef() throws RecognitionException {
        EdgeFromDefContext _localctx = new EdgeFromDefContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_edgeFromDef);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(124);
                match(T__15);
                setState(125);
                match(VALUE);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class EdgeToDefContext extends ParserRuleContext {
        public TerminalNode VALUE() {
            return getToken(PgLangParser.VALUE, 0);
        }

        public EdgeToDefContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_edgeToDef;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PgLangListener) ((PgLangListener) listener).enterEdgeToDef(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PgLangListener) ((PgLangListener) listener).exitEdgeToDef(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PgLangVisitor) return ((PgLangVisitor<? extends T>) visitor).visitEdgeToDef(this);
            else return visitor.visitChildren(this);
        }
    }

    public final EdgeToDefContext edgeToDef() throws RecognitionException {
        EdgeToDefContext _localctx = new EdgeToDefContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_edgeToDef);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(127);
                match(T__16);
                setState(128);
                match(VALUE);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class FromNodeStyleDefContext extends ParserRuleContext {
        public TerminalNode VALUE() {
            return getToken(PgLangParser.VALUE, 0);
        }

        public FromNodeStyleDefContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_fromNodeStyleDef;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PgLangListener) ((PgLangListener) listener).enterFromNodeStyleDef(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PgLangListener) ((PgLangListener) listener).exitFromNodeStyleDef(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PgLangVisitor)
                return ((PgLangVisitor<? extends T>) visitor).visitFromNodeStyleDef(this);
            else return visitor.visitChildren(this);
        }
    }

    public final FromNodeStyleDefContext fromNodeStyleDef() throws RecognitionException {
        FromNodeStyleDefContext _localctx = new FromNodeStyleDefContext(_ctx, getState());
        enterRule(_localctx, 24, RULE_fromNodeStyleDef);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(130);
                match(T__12);
                setState(131);
                match(T__17);
                setState(132);
                match(T__13);
                setState(133);
                match(VALUE);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ToNodeStyleDefContext extends ParserRuleContext {
        public TerminalNode VALUE() {
            return getToken(PgLangParser.VALUE, 0);
        }

        public ToNodeStyleDefContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_toNodeStyleDef;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof PgLangListener) ((PgLangListener) listener).enterToNodeStyleDef(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof PgLangListener) ((PgLangListener) listener).exitToNodeStyleDef(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof PgLangVisitor)
                return ((PgLangVisitor<? extends T>) visitor).visitToNodeStyleDef(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ToNodeStyleDefContext toNodeStyleDef() throws RecognitionException {
        ToNodeStyleDefContext _localctx = new ToNodeStyleDefContext(_ctx, getState());
        enterRule(_localctx, 26, RULE_toNodeStyleDef);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(135);
                match(T__12);
                setState(136);
                match(T__18);
                setState(137);
                match(T__13);
                setState(138);
                match(VALUE);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class DefineStyleStmtContext extends ParserRuleContext {
        public List<TerminalNode> VALUE() {
            return getTokens(PgLangParser.VALUE);
        }

        public TerminalNode VALUE(int i) {
            return getToken(PgLangParser.VALUE, i);
        }

        public WithLegendContext withLegend() {
            return getRuleContext(WithLegendContext.class, 0);
        }

        public DefineStyleStmtContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_defineStyleStmt;
        }
